--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-    "packages": [
-        "packages/*"
-    ],
-    "version": "1.0.0",
+    "packages": ["packages/*"],
+    "version": "independent",
     "npmClient": "yarn",
     "useWorkspaces": true
 }
