--- a/packages/demo-ui/package.json
+++ b/packages/demo-ui/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@lerna-project/demo-core": "^1.0.0",
-        "react": "^17.0.1"
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     }
 }
